[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aspirepath-v1"
version = "1.0.0"
description = "OpenEnv Grade 10 career counseling environment."
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "uvicorn",
    "fastapi",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
